[package]
name = "eggbug"
version = "0.1.2"
edition = "2021"
description = "Bot library for cohost.org"
repository = "https://github.com/iliana/eggbug-rs"
license-file = "LICENSE.md"

[dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
derive_more = { version = "0.99.17", default-features = false, features = ["display", "from", "from_str", "into"] }
futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
hmac = "0.12.1"
pbkdf2 = { version = "0.11.0", default-features = false }
reqwest = { version = "0.11.11", default-features = false, features = ["cookies", "json", "multipart", "stream"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
sha2 = "0.10.2"
thiserror = "1.0.31"
tokio = { version = "1.19.2", default-features = false, optional = true }
tokio-util = { version = "0.7.3", default-features = false, optional = true }
tracing = "0.1.35"
uuid = { version = "1.1.2", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.58"
dotenv = "0.15.0"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }

[features]
default = ["default-tls", "fs"]
default-tls = ["reqwest/default-tls"]
fs = ["tokio/fs", "tokio-util/codec"]
